--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Về Chúng Tôi | Fair Game Team</title>
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
@@ -56,8 +56,7 @@
 
         /* 3. Tên thành viên (Sửa font to, rõ) */
         .member-name {
-            font-family: 'Rajdhani', sans-serif;
-            font-size: 26px; /* To hơn cũ */
+            font-size: 21px; /* To hơn cũ */
             font-weight: 800; /* Rất đậm */
             color: #fff;
             text-transform: uppercase;
