--- a/games/game1.html
+++ b/games/game1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ace Slayer - Fair Game</title>
     
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
@@ -91,7 +91,7 @@
                 <p class="price">Free</p> 
                 <p class="desc">
                     Ace Slayer là một game nhập vai hành động thế giới mở... 
-                    (Mô tả game...)
+                    Bạn sẽ vào vai một chiến binh huyền thoại, khám phá vùng đất rộng lớn, hoàn thành nhiệm vụ và chiến đấu với kẻ thù để trở thành Ace Slayer đích thực!
                 </p>
                 
                 <button class="big-btn" onclick="addToCart('Ace Slayer', 0, '../images/slayer.png')">
