--- a/aboutus.html
+++ b/aboutus.html
@@ -217,24 +217,22 @@
     </div>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>Fair Game Store</h3>
-                <p>Uy tín tạo nên thương hiệu.</p>
-            </div>
-            <div class="footer-section">
-                <h3>Liên hệ</h3>
-                <p>Email: team@fairgame.vn</p>
-            </div>
-            <div class="footer-section">
-                <h3>Kết nối</h3>
-                <div class="socials">
-                    <i class="fab fa-facebook"></i>
-                    <i class="fab fa-github"></i>
-                </div>
-            </div>
+        <div class="footer-content" style="display: block; text-align: center; padding-bottom: 20px;">
+            <h3 style="color: #e74c3c; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 15px; font-size: 1.5em;">
+                <i class="fas fa-exclamation-triangle"></i> Miễn trừ trách nhiệm
+            </h3>
+            
+            <p style="font-size: 1.1em; color: #ccc; max-width: 800px; margin: 0 auto; line-height: 1.6;">
+                Đây là sản phẩm <strong>ĐỒ ÁN MÔN HỌC</strong>, được thực hiện với mục đích duy nhất là học tập và nghiên cứu kỹ thuật lập trình Web.
+                <br>
+                Website này hoàn toàn <strong>KHÔNG</strong> kinh doanh, không thu lợi nhuận và <strong>KHÔNG</strong> sử dụng cho mục đích thương mại. 
+                Tất cả hình ảnh và tài nguyên game được sử dụng trên trang web chỉ mang tính chất minh họa.
+            </p>
         </div>
-        <div class="footer-bottom">&copy; 2025 Fair Game Team</div>
+        
+        <div class="footer-bottom">
+            &copy; 2025 Student Project | Developed by <b>Nhóm 3 - 25CTT6B - Khoa CNTT - HCMUS</b>
+        </div>
     </footer>
 
     <div class="cart-sidebar" id="cartSidebar">
