update user "NgocVu"

--- a/aboutus.html
+++ b/aboutus.html
@@ -189,7 +189,7 @@
                 <p class="member-bio">Xây dựng hệ thống gameplay.</p>
             </a>
 
-            <a href="https://sites.google.com/view/nguyenngocvu" target="_blank" class="member-card reveal">
+            <a href="https://deluxe-bonbon-dd965c.netlify.app/" target="_blank" class="member-card reveal">
                 <div class="member-avatar"><i class="fas fa-gamepad"></i></div>
                 <h3 class="member-name">Nguyễn Ngọc Vũ</h3>
                 <p class="member-role">Game Developer</p>
