--- a/docquyen.html
+++ b/docquyen.html
@@ -122,14 +122,14 @@
             <div class="product-card reveal" data-tags="casual arcade">
                 <div class="card-img-wrapper">
                     <a href="games/game8.html">
-                        <img src="images/apple.png" alt="Apple Collector">
+                        <img src="images/apple.png" alt="Catch Fruits">
                     </a>
-                    <i class="fas fa-heart wishlist-btn" onclick="toggleWishlist('Apple Collector')" data-game="Apple Collector"></i>
+                    <i class="fas fa-heart wishlist-btn" onclick="toggleWishlist('Catch Fruits')" data-game="Catch Fruits"></i>
                 </div>
-                <h3>Apple Collector</h3>
+                <h3>Catch Fruits</h3>
                 <p class="genre">Casual</p>
                 <p class="price">Free</p>
-                <button onclick="addToCart('Apple Collector', 0, 'images/apple.png')">Thêm vào giỏ</button>
+                <button onclick="addToCart('Catch Fruits', 0, 'images/apple.png')">Thêm vào giỏ</button>
             </div>
 
         </div>
