--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
                     </a>
                     <i class="fas fa-heart wishlist-btn" onclick="toggleWishlist('Apple Collector')" data-game="Apple Collector"></i>
                 </div>
-                <h3>Apple Collector</h3>
+                <h3>Catch Fruits</h3>
                 <p class="genre">Casual</p>
                 <p class="price">Free</p>
-                <button onclick="addToCart('Apple Collector', 0, 'images/apple.png')">Thêm vào giỏ</button>
+                <button onclick="addToCart('Catch Fruits', 0, 'images/apple.png')">Thêm vào giỏ</button>
             </div>
 
             <div class="product-card reveal" data-tags="action rpg">
