--- a/aboutus.html
+++ b/aboutus.html
@@ -173,7 +173,7 @@
                 <p class="member-bio">Chuyên gia phát triển logic game.</p>
             </a>
 
-            <a href="#" class="member-card reveal">
+            <a href="https://tuannxtt11.blogspot.com/" class="member-card reveal">
                 <div class="member-avatar"><i class="fas fa-gamepad"></i></div>
                 <h3 class="member-name">Nguyễn Xuân Thái Tuấn</h3>
                 <p class="member-role">Game Developer</p>
