--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
             <div class="product-card reveal" data-tags="casual arcade">
                 <div class="card-img-wrapper">
                     <a href="games/game8.html">
-                        <img src="images/apple.png" alt="Apple Collector">
+                        <img src="images/apple.png" alt="Catch Fruits">
                     </a>
-                    <i class="fas fa-heart wishlist-btn" onclick="toggleWishlist('Apple Collector')" data-game="Apple Collector"></i>
+                    <i class="fas fa-heart wishlist-btn" onclick="toggleWishlist('Catch Fruits')" data-game="Catch Fruits"></i>
                 </div>
                 <h3>Catch Fruits</h3>
                 <p class="genre">Casual</p>
