--- a/profile.html
+++ b/profile.html
@@ -279,7 +279,7 @@
             "FreeFire": { img: "images/freefire.jpg", price: "Free" },
             "Earth 2130": { img: "images/earth2130.png", price: "Free" },
             "UFO Attack": { img: "images/ufo.png", price: "Free" },
-            "Apple Collector": { img: "images/apple.png", price: "Free" },
+            "Catch Fruits": { img: "images/apple.png", price: "Free" },
             "Monster Hunter": { img: "images/monsterhunter.avif", price: "$29.99" },
             "Resident Evil": { img: "images/residentevil4.webp", price: "$29.99" },
             "ARK: Survival Ascended": { img: "images/ark.webp", price: "$19.99" },
